Added header & styled

--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="css/style.css">
   <title>Microsoft</title>
 </head>
 <body>
-  
+
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <div class="nav-container">
+        <nav class="nav-one">
+          <div class="menu-burger">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <i class="fas fa-search"></i>
+          <form>
+            <input type="text">
+          </form>
+          <a href="#" class="nav-link">
+            <img src="img/m-logo.png" alt="" class="nav-logo">
+            <ul>
+              <li><a href="#">Microsoft 365</a></li>
+              <li><a href="#">Office</a></li>
+              <li><a href="#">Windows</a></li>
+              <li><a href="#">Surface</a></li>
+              <li><a href="#">Xbox</a></li>
+              <li><a href="#">Offres spéciale</a></li>
+              <li><a href="#">Support technique</a></li>
+            </ul>
+          </a>
+          <a href="#"><i class="fas fa-shopping-basket"></i></a>
+          <a href="#"><i class="far fa-user-circle"></i></a>
+        </nav>
+        <nav class="nav-two">
+          <ul>
+            <li><a href="#">Tout microsoft</a></li>
+            <li><a href="#">Rechercher</a></li>
+            <li><a href="#">Panier</a></li>
+            <li><a href="#">Se connecter</a></li>
+          </ul>
+        </nav>
+      </div>
+      
+    </div>
+  </header>
 </body>
 </html>
