--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
           </form>
           <a href="#" class="nav-link">
             <img src="img/m-logo.png" alt="" class="nav-logo">
-            <ul>
-              <li><a href="#">Microsoft 365</a></li>
-              <li><a href="#">Office</a></li>
-              <li><a href="#">Windows</a></li>
-              <li><a href="#">Surface</a></li>
-              <li><a href="#">Xbox</a></li>
-              <li><a href="#">Offres spéciale</a></li>
-              <li><a href="#">Support technique</a></li>
-            </ul>
           </a>
           <a href="#"><i class="fas fa-shopping-basket"></i></a>
           <a href="#"><i class="far fa-user-circle"></i></a>
+          <ul>
+            <li><a href="#">Microsoft 365</a></li>
+            <li><a href="#">Office</a></li>
+            <li><a href="#">Windows</a></li>
+            <li><a href="#">Surface</a></li>
+            <li><a href="#">Xbox</a></li>
+            <li><a href="#">Offres spéciale</a></li>
+            <li><a href="#">Support technique</a></li>
+          </ul>
         </nav>
         <nav class="nav-two">
           <ul>
@@ -48,8 +48,35 @@
           </ul>
         </nav>
       </div>
-      
     </div>
   </header>
+
+  <!-- Showcase -->
+  <section class="showcase">
+    <div class="showcase-diapo">
+      <img src="img/m-d-2-mobile.webp" alt="" class="showcase-diapo-img">
+
+      <div class="showcase-text">
+        <a href="#">
+          <h3 class="showcase-title">Lorem ipsum dolor sit amet<br />consectetur</h3>
+          <p class="showcase-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi delectus quam ullam quasi eos voluptates ut rerum facilis magnam tempora.</p>
+          <a href="#" class="showcase-link">Trouver votre appareil Surface <i class="fas fa-chevron-right"></i></button>
+        </a>
+
+        <div class="showcase-btn-controls">
+          <i class="fas fa-circle"></i>
+          <i class="far fa-circle"></i>
+
+          <i class="fas fa-play"></i>
+          <!-- <i class="fas fa-pause"></i> -->
+          <span>Lire le diaporama</span>
+        </div>
+      </div>
+
+      <button class="showcase-btn-prev"><i class="fas fa-chevron-left"></i></button>
+      <button class="showcase-btn-next"><i class="fas fa-chevron-right"></i></button>
+    </div>
+  </section>
+
 </body>
 </html>
