On progress with footer

--- a/index.html
+++ b/index.html
@@ -78,5 +78,114 @@
     </div>
   </section>
 
+  <!-- products -->
+  <div class="container">
+    <section class="products-container">
+      <nav class="nav-three">
+        <ul>
+          <li>
+            <img src="img/m-i-4.png" alt="">
+            <a href="#">Choisissez votre Microsoft 365</a>
+          </li>
+          <li>
+            <img src="img/m-tab.webp" alt="">
+            <a href="#">Acheter des appareils Surface</a>
+          </li>
+          <li>
+            <img src="img/m-i-2.webp" alt="">
+            <a href="#">Acheter des jeux et consoles Xbox</a>
+          </li>
+          <li>
+            <img src="img/m-i-1.webp" alt="">
+            <a href="#">Obtenir Windows 11</a>
+          </li>
+          <li>
+            <img src="img/m-i-3.webp" alt="">
+            <a href="#">Appareils et logiciels professionnels</a>
+          </li>
+          <li>
+            <img src="img/m-i-4.webp" alt="">
+            <a href="#">Achat pour les étudiants</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="products-items">
+        <article class="item">
+          <img src="img/item-1.webp" alt="">
+          <h3>Surface Laptp 4</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequuntur ad fugit vero tempora ex, eos eligendi facere animi itaque.</p>
+          <a href="#">Surface Lapton 4</a>
+          <a href="#">Pack avantage Surface Laptop 4</a>
+        </article>
+
+        <article class="item">
+          <img src="img/item-2.webp" alt="">
+          <h3>Xbox Serie S</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequuntur ad fugit vero tempora ex, eos eligendi facere animi itaque.</p>
+          <a href="#">Acheter maintenant</a>
+        </article>
+
+        <article class="item">
+          <img src="img/item-3.webp" alt="">
+          <h3>Microsoft 365</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequuntur ad fugit vero tempora ex, eos eligendi facere animi itaque.</p>
+          <a href="#">Jusqu'à 6 utilisateur</a>
+          <a href="#">Pour 1 utilisateur</a>
+        </article>
+
+        <article class="item">
+          <img src="img/item-4.webp" alt="">
+          <a class="item-new" href="#">Nouveau</a>
+          <h3>Surface Go 3</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequuntur ad fugit vero tempora ex, eos eligendi facere animi itaque.</p>
+          <a href="#">Acheter maintenant</a>
+        </article>
+      </div>
+    </section>
+  </div>
+
+  <!-- News letter -->
+  <section class="news-letter">
+    <div class="news-letter-images">
+      <img src="img/game-news-letter.jpg" alt="">
+    </div>
+    <div class="news-letter-text">
+      <h3>Xbox Game Pass Ultimate</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure magni molestias odio blanditiis aperiam aut, nihil vitae a ea rem</p>
+      <a href="#">S'inscrire maintenant</a>
+    </div>
+  </section>
+
+  <!-- Follows -->
+  <section class="follow">
+    <div class="container">
+      <span>Suivre Microsoft</span>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./img/facebook.svg">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/twitter.svg">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/youtube.svg">
+          </a>
+        </li>
+      </ul>
+      <span>Accessibilité: partiellement conforme</span>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    
+  </footer>
+
 </body>
 </html>
